# LCI.DonCEyKongJr

./: .gitignore  CMakeLists.txt  README.md
java-Sockets/src/: Sockets.java
sockets/: CMakeLists.txt  hello  main.c
src/tec/ac/cr/client/: CMakeLists.txt  main.c
src/tec/ac/cr/client/src/: bitmapNode.c  bitmapNode.h  gui.c  gui.h  main.c
src/tec/ac/cr/client/src/logic/: Game.c  Game.h
src/tec/ac/cr/client/src/logic/entity/: DKJr.h  Fruit.h  Kremlin.h
src/tec/ac/cr/client/src/logic/lists/: FruitNode.c  FruitNode.h  KremlinNode.c  KremlinNode.h
src/tec/ac/cr/client/src/socket/: Serializer.c  Serializer.h  Socket.c  Socket.h  cJson.c  cJson.h
src/tec/ac/cr/client/src/ui/: AllegroWindow.c  AllegroWindow.h  gui.c  gui.h
src/tec/ac/cr/server/logic/: BlueKremlin.java  DKJr.java  Entity.java  Fruit.java  Game.java  Kremlin.java  RedKremlin.java
src/tec/ac/cr/server/src/logic/: BlueKremlin.java  DKJr.java  Entity.java  Fruit.java  Game.java  Kremlin.java  RedKremlin.java
src/tec/ac/cr/server/src/socket/: Sala.java  Serializer.java  Sockets.java
src/tec/ac/cr/server/src/ui/: Main.java  MainWindowController.java  Test.java  mainWindow.fxml
src/tec/ac/cr/server/ui/: Main.java  MainWindowController.java  mainWindow.fxml
